Fix CSS formatting: remove unnecessary whitespace in anchor styles

--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,6 @@
     box-sizing: border-box;
 }
 a{
-    
+    text-decoration: none;
+    color: inherit;
 }
